intervencion camila restrepo

--- a/cuandoEraFelizEInDocumentado.html
+++ b/cuandoEraFelizEInDocumentado.html
@@ -31,7 +31,7 @@
         <div id="imagen">
           <img
             id="imagen"
-            src="img/cuando_era_feliz_e_indocumentado.jpg"
+            src="img/cuandoEraFelizEIndocumentado.jpg"
             alt="Portada del libro Cuando era feliz e indocumentado"
           />
         </div>
@@ -51,7 +51,7 @@
         </div>
       </div>
       <div id="resenaNoFiccion">
-        <h2>RESEÑA</h2>
+        <h2>Reseña</h2>
         <p>
           Desde la dimisión del por entonces Primer Ministro Británico por estar
           en desacuerdo con la forma de llevar a cabo la construcción del Canal
