--- a/elNegroQueHizoEsperarALosAngeles.html
+++ b/elNegroQueHizoEsperarALosAngeles.html
@@ -30,7 +30,7 @@
           <img src="img/ElNegroQueHizoEsperarALosAngeles.jpg" alt="Portada" />
         </div>
         <div id="datos">
-          <h1 id="tituloCuento">El negro que hizo esperar a loa ángeles</h1>
+          <h1 id="tituloCuento">El negro que hizo esperar a los ángeles</h1>
           <h3>
             Año:1972 (Ojos de perro azul)
           </h3>
@@ -97,7 +97,7 @@
               href="https://www.panamericana.com.co/ojos-de-perro-azul-2/p"
               target="blank"
             >
-              <img src="img/panamericana.png.png" alt="Panamericana" />
+              <img src="img/panamericana.png" alt="Panamericana" />
             </a>
           </td>
         </tr>
