--- a/cienAniosDeSoledad.html
+++ b/cienAniosDeSoledad.html
@@ -100,7 +100,7 @@
               <a
                 href="https://www.librerialerner.com.co/cien-a%C3%B1os-de-soledad-edicion-ilustrada-9788439732471-1585/p"
                 target="_blank"
-                ><img src="img/libreriaLerner.png.png" alt=""
+                ><img src="img/libreriaLerner.png" alt=""
               /></a>
             </td>
           </tr>
@@ -108,6 +108,6 @@
       </div>
     </div>
 
-    <div id="footer"><i>Desarrolado por "Full Stack PM-A"</i></div>
+    <div id="footer"><i>Desarrollado por "Full Stack PM-A"</i></div>
   </body>
 </html>
