intervencion camila restrepo

--- a/doceCuentosPeregrinos.html
+++ b/doceCuentosPeregrinos.html
@@ -32,7 +32,7 @@
           />
         </div>
         <div id="datos">
-          <h1 id="tituloCuento">DOCE CUENTOS PEREGRINOS</h1>
+          <h1 id="tituloCuento">Doce Cuentos Peregrinos</h1>
           <h3>Año: 1992</h3>
           <h3>Categoria:Cuento</h3>
           <h3>
