--- a/elRastroDeTuSangreEnLaNieve.html
+++ b/elRastroDeTuSangreEnLaNieve.html
@@ -34,7 +34,7 @@
           />
         </div>
         <div id="datos">
-          <h1 id="tituloCuento">EL RASTRO DE TU SANGRE EN LA NIEVE</h1>
+          <h1 id="tituloCuento">El rastro de tu sangre en la nieve/h1>
           <h3>Año: 1976</h3>
           <h3>Categoria: Cuento</h3>
           <h3>
