--- a/laBenditaManiaDeContar.html
+++ b/laBenditaManiaDeContar.html
@@ -28,7 +28,7 @@
                 <img   width="300" height="300" src="img/LaBenditaManíaDeContar.jpg" alt="La Bendita Man&iacute;a de Contar"> 
             </div>
            <div id="datos">  
-               <h1 id="tituloNoFiccion">La Bendita Man&iacute;a de Contar</h1>
+               <h1 id="tituloNoFiccion">La Bendita Mania de Contar</h1>
                <h3>A&ntilde;o: 1998</h3>
                <h3>Categor&iacute;a: No Ficción</h3>
                <h3>Premios: No feriere </h3>
