--- a/littin.html
+++ b/littin.html
@@ -33,7 +33,9 @@
           />
         </div>
         <div>
-          <h1 id="tituloNoficcion">Miguel Littin</h1>
+          <h1 id="tituloNoficcion">
+            La aventura de Miguel Littin clandestino en Chile
+          </h1>
         </div>
         <div id="datos">
           <h3>Año de publicación:</h3>
